style: refactor code to conform to style guide